# bstree

./: .gitignore  readme.md
.circleci/: config.yml
.github/workflows/: c.yml  cpp.yml  diagram.yml  elixir.yml  java.yml  javascript.yml  lua.yml  pr-title-linter.yml  racket.yml
.semaphore/: semaphore.yml
c/: .astylerc  .gitignore  configure.ac
c++/: .gitignore  readme.md
c++/include/: node.h  tree.h
c++/src/: Makefile.am  node.cpp  tree.cpp
c++/test/: .gitignore  Makefile.am  node_preorder_test.cpp  node_test.cpp  runtests.sh  testutils.h  tree_properties_test.cpp  tree_test.cpp
c/include/: is_yaml.h  tree.h  yaml.h
c/src/: .gitignore  Makefile.am  collector.c  node.c  node_private.h  tree.c  yaml.c
c/test/: .gitignore  Makefile.am  colortest.h  runtests.sh  test_collector.cpp  test_node.cpp  test_tree.cpp  test_yaml.cpp  testutils.h
doc/: .gitignore  Makefile  __latexindent_temp.tex  avl-tree.tex  bst-properties.tex  bst-use.tex  bst.tex  containerizing.tex  examples.tex  introduction.tex  literature-review.tex  operations.tex  persistence.tex  red-black-tree.tex  summary.tex  theorems.tex
elixir/: mix.exs
elixir/config/: .credo.exs
elixir/lib/bst/: node.ex  tree.ex
elixir/test/: bst_node_test.exs  bst_test.exs
fixtures/: README.md  tree1.yml  tree10.yml  tree123.yml  tree132.yml  tree2.yml  tree312.yml  tree321.yml  tree4.yml  tree5.yml  tree6.yml  tree7.yml  tree8.yml  tree9.yml
fixtures/full/: tree1.yml  tree3.yml  tree5_left.yml  tree5_right.yml  tree7.yml  tree9.yml
fixtures/perfect/: tree1.yml  tree15.yml  tree3.yml  tree7.yml
java/: pom.xml
js/: .eslintrc.json  package-lock.json  package.json  readme.md
js/lib/: from_yaml.js  node.js  tree.js
js/spec/: from_yaml_spec.js  node_spec.js  tree_delete_spec.js  tree_spec.js
lua/: readme.md
lua/lib/: node.lua  tree.lua
lua/spec/: node_spec.lua  tree_spec.lua
python/: .coveragerc  .gitignore  Pipfile  README.md  main.py
python/lib/: node.py  pnode.py  tree.py
python/test/: node_test.py  pnode_test.py  tree_delete_test.py  tree_test.py
racket/: LICENSE-MIT  info.rkt  readme.md  testem-test.rkt  testem.rkt
racket/scribblings/: bst.scrbl
ruby/: .flayignore  .gitignore  .reek.yml  .rubocop.yml  Gemfile  readme.md
ruby/config/: sentry.rb
ruby/lib/: README.md  avl_node.rb  avl_tree.rb  binary_search_tree.rb  calkin_wilf.rb  gcd.rb  generator.rb  hash_node.rb  hash_tree.rb  hash_value.rb  iterative_node.rb  iterative_tree.rb  node.rb  rb_node.rb  rb_tree.rb  stern_brocot.rb  threaded_node.rb  tree.rb
ruby/scripts/: flake_maker.sh
ruby/spec/: avl_fun_and_games_spec.rb  avl_node_spec.rb  avl_tree_spec.rb  binary_search_tree_spec.rb  calkin_wilf_spec.rb  factories.rb  flaky_spec.rb  gcd_spec.rb  generator_spec.rb  hash_node_spec.rb  hash_tree_spec.rb  hash_value_spec.rb  invert_spec.rb  iterative_node_spec.rb  iterative_tree_spec.rb  lca_spec.rb  node_invert_spec.rb  node_lca_spec.rb  node_path_spec.rb  node_spec.rb  nodes.rb  rb_node_spec.rb  rb_tree_spec.rb  spec_helper.rb  stern_brocot_spec.rb  threaded_node_spec.rb  tree_delete_spec.rb  tree_invert_spec.rb  tree_spec.rb
ruby/spec/shared_examples/: maximum.rb  minimum.rb  predecessor.rb  successor.rb
ruby/spec/shared_examples/tree/: inorder_walk.rb  postorder_walk.rb  preorder_walk.rb
rust/: Cargo.toml  readme.md
rust/src/: lib.rs
sql/: celko-tree.sql  create-tree-postgres.sql  create-tree-sqlite.sql  locations.sql
